# eeecalc

./: .gitignore  README.md  githubtoken.txt  howToBuildAndUpload.txt  pyproject.toml
src/eeeCalc/: dBtoRatio.py  filter.py  general.py  phasors.py  secondDegreeDiffEq.py  signalFunctions.py  transferFunctionPlot.py  trigFunc.py
tests/: filterTest.py
