[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "eeeCalc"
version = "0.0.91"
authors = [
  { name="Kevin Johnson", email="john2003.kjj@gmail.com" },
]
description = "Package to aid electrical engineering calculations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

#[project.urls]
#"Homepage" = "https://github.com/pypa/sampleproject"
#"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"